top nav and search almost done

--- a/search.html
+++ b/search.html
@@ -3,15 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>Greg's List</title>
-    <link rel="stylesheet" href="/style/main.css">
-    <meta name="description" content="This is an example of a meta description. This will often show up in search results.">
+    <link rel="stylesheet" type="text/css" href="style/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- reset -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+    <meta name="description" content="Greg's List a classified ads site">
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="#">Post</a></li>
-        <li><a href="#">Account</a></li>
-      </ul>
-    </nav>
+    <header>
+      <h4>Greg's List</h4>
+      <nav>
+        <ul>
+          <li><a href="#">Post</a></li>
+          <li><a href="#">Account</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="search">
+      <form action="#" method="post">
+        <label>Search Jobs</label>
+        <input type="text" placeholder="Seach software jobs" class="input">
+        <input type="image" src="images/magnifying-glass.png" class="input img">
+      </form>
+    </section>
+
   </body>
 </html>
