--- a/search.html
+++ b/search.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <h4>Greg's List</h4>
-      <nav>
+      <nav class="header-nav">
         <ul>
           <li><a href="#">Post</a></li>
           <li><a href="#">Account</a></li>
@@ -26,6 +26,14 @@
         <input type="image" src="images/magnifying-glass.png" class="input img">
       </form>
     </section>
-
+    <section class="page-nav">
+      <nav class="pages">
+        <ul>
+          <li class="first"><a href="#">prev</a></li>
+          <li class="second"> 1 to 100 of 179 </li>
+          <li class="last"><a href="#">next</a></li>
+        </ul>
+      </nav>
+    </section>
   </body>
 </html>
