Look is all correct except the links

--- a/search.html
+++ b/search.html
@@ -27,7 +27,7 @@
       </form>
     </section>
     <section class="page-nav">
-      <nav class="pages">
+      <nav>
         <ul>
           <li class="first"><a href="#">prev</a></li>
           <li class="second"> 1 to 100 of 179 </li>
@@ -35,5 +35,12 @@
         </ul>
       </nav>
     </section>
+    <main>
+      <ul>
+        <li><span class="date">June 22</span><a href="#" class="posting-title">Technical Project Manager</a><span class="location">Midtown East</span></li>
+        <li><span class="date">June 21</span><a href="#" class="posting-title">Front End Developer</a><span class="location">SoHo</span></li>
+        <li><span class="date">June 20</span><a href="#" class="posting-title">Senior Python Developer / Cofonder</a><span class="location">Flatiron</span></li>
+      </ul>
+    </main>
   </body>
 </html>
