Looks good and reduced number of css lines

--- a/search.html
+++ b/search.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <h4>Greg's List</h4>
+      <h3>Greg's List</h3>
       <nav class="header-nav">
         <ul>
           <li><a href="#">Post</a></li>
@@ -19,28 +19,28 @@
         </ul>
       </nav>
     </header>
-    <section class="search">
+    <section class = "sections search">
       <form action="#" method="post">
         <label>Search Jobs</label>
         <input type="text" placeholder="Seach software jobs" class="input">
-        <input type="image" src="images/magnifying-glass.png" class="input img">
+        <input type="image" src="images/magnifying-glass.png" class="img">
       </form>
     </section>
-    <section class="page-nav">
+    <section class = "sections page-nav">
       <nav>
         <ul>
-          <li class="first"><a href="#">prev</a></li>
+          <li class="first"><a href="#">&#60; prev</a></li>
           <li class="second"> 1 to 100 of 179 </li>
-          <li class="last"><a href="#">next</a></li>
+          <li class="last"><a href="#">next &#62;</a></li>
         </ul>
       </nav>
     </section>
-    <main>
+    <section class = "sections listings">
       <ul>
         <li><span class="date">June 22</span><a href="#" class="posting-title">Technical Project Manager</a><span class="location">Midtown East</span></li>
         <li><span class="date">June 21</span><a href="#" class="posting-title">Front End Developer</a><span class="location">SoHo</span></li>
         <li><span class="date">June 20</span><a href="#" class="posting-title">Senior Python Developer / Cofonder</a><span class="location">Flatiron</span></li>
       </ul>
-    </main>
+    </section>
   </body>
 </html>
