added border radius and border to search image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <form action="#" method="post">
         <label>Search Jobs</label>
         <input type="text" placeholder="Seach software jobs" class="input">
-        <input type="image" src="images/magnifying-glass.png" class="img">
+        <input type="image" src="images/magnifying-glass.png" class="input img">
       </form>
     </section>
     <section class = "sections page-nav">
